--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="100dp"
         android:layout_marginHorizontal="16dp"
         android:background="@drawable/rounded_background_gradient"
         android:gravity="center"
@@ -16,11 +16,11 @@
 
         <ImageView
             android:id="@+id/iv_settings"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
             android:layout_centerInParent="true"
             android:layout_marginVertical="10dp"
-            android:src="@drawable/baseline_settings_24" />
+            android:src="@drawable/profile_icon" />
 
         <TextView
             android:id="@+id/emailTextView"
