--- a/app/src/main/res/layout/fragment_scan.xml
+++ b/app/src/main/res/layout/fragment_scan.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Scan">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
 <!--        <ImageView-->
 <!--            android:id="@+id/iv_scan"-->
@@ -16,44 +14,54 @@
 <!--            android:layout_height="200dp"-->
 <!--            android:layout_centerInParent="true"/>-->
 
-        <ImageView
-            android:id="@+id/captureImageView"
-            android:layout_width="350dp"
-            android:layout_height="450dp"
-            android:layout_centerInParent="true"
-            android:background="@drawable/iv_picture"
-            android:scaleType="centerCrop" />
+    <ImageView
+        android:id="@+id/captureImageView"
+        android:layout_width="350dp"
+        android:layout_height="500dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/iv_picture"
+        android:scaleType="centerCrop"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <android.widget.Button
-            android:id="@+id/captureImgBtn"
-            android:layout_width="69dp"
-            android:layout_height="71dp"
+    <android.widget.Button
+        android:id="@+id/captureImgBtn"
+        android:layout_width="69dp"
+        android:layout_height="71dp"
 
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginVertical="33dp"
-            android:layout_marginEnd="168dp"
-            android:layout_marginBottom="35dp"
-            android:background="@drawable/rounded_button"
-            android:text="" />
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginVertical="33dp"
+        android:layout_marginEnd="118dp"
+        android:layout_marginBottom="110dp"
+        android:background="@drawable/rounded_button"
+        android:text=""
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/pickImgBtn"
+        app:layout_constraintTop_toBottomOf="@+id/captureImageView" />
 
-        <Button
-            android:id="@+id/pickImgBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginVertical="25dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="55dp"
-            android:layout_marginBottom="24dp"
-            android:layout_toStartOf="@+id/captureImgBtn"
-            android:background="@android:color/transparent"
-            android:drawableTop="@drawable/gallery"
-            android:drawablePadding="0dp"
-            android:text="Gallery"
-            android:textColor="@color/primary_color_1" />
+    <Button
+        android:id="@+id/pickImgBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginVertical="25dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginBottom="28dp"
+        android:layout_toStartOf="@+id/captureImgBtn"
+        android:background="@android:color/transparent"
+        android:drawableTop="@drawable/gallery"
+        android:drawablePadding="0dp"
+        android:text="Gallery"
+        android:textColor="@color/primary_color_1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/captureImageView" />
 
 
-    </RelativeLayout>
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
