--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -35,6 +35,7 @@
             android:id="@+id/saveTransactionButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
             android:background="@drawable/rounded_background_transparent"
             android:text="Save Transaction List"
             android:layout_marginVertical="10dp"
