--- a/app/src/main/res/menu/side_nav_menu.xml
+++ b/app/src/main/res/menu/side_nav_menu.xml
@@ -5,13 +5,16 @@
         android:icon="@drawable/transaction_icon"
         />
     <item
+        android:id="@+id/nav_graphs"
+        android:icon="@drawable/graphs_icon"
+        />
+    <item
         android:id="@+id/nav_scan"
         android:icon="@drawable/scan_icon"
         />
     <item
-        android:id="@+id/nav_graphs"
-        android:icon="@drawable/graphs_icon"
-        />
+        android:id="@+id/nav_twibbon"
+        android:icon="@drawable/baseline_photo_camera_24" />
     <item
         android:id="@+id/nav_settings"
         android:icon="@drawable/settings_icon"
