--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -17,7 +17,7 @@
         />
     <item
         android:id="@+id/nav_twibbon"
-        android:icon="@drawable/baseline_photo_camera_24"
+        android:icon="@drawable/camera_icon"
         android:title="Twibbon"/>
     <item
         android:id="@+id/nav_settings"
