--- a/app/src/main/res/menu/side_nav_menu.xml
+++ b/app/src/main/res/menu/side_nav_menu.xml
@@ -14,7 +14,7 @@
         />
     <item
         android:id="@+id/nav_twibbon"
-        android:icon="@drawable/baseline_photo_camera_24" />
+        android:icon="@drawable/camera_icon" />
     <item
         android:id="@+id/nav_settings"
         android:icon="@drawable/settings_icon"
