--- a/app/src/main/res/layout-land/fragment_twibbon.xml
+++ b/app/src/main/res/layout-land/fragment_twibbon.xml
@@ -9,12 +9,11 @@
 
     <FrameLayout
         android:id="@+id/frameLayout"
-        android:layout_width="400dp"
-        android:layout_height="400dp"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_marginEnd="24dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="30dp">
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.camera.view.PreviewView
             android:id="@+id/previewView"
@@ -44,9 +43,9 @@
         android:scaleType="centerCrop"
         android:src="@drawable/rounded_button"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/frameLayout"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <ImageButton
@@ -57,10 +56,10 @@
         android:background="?attr/selectableItemBackgroundBorderless"
         android:src="@drawable/baseline_refresh_24"
         android:visibility="gone"
+        app:layout_constraintEnd_toStartOf="@+id/frameLayout"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/capture"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/capture"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
